--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="../html,cssForm/style.css">
-    </head>
-    <body>
-<main>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./html,cssForm/style.css">
+</head>
+
+<body>
+  <main>
     <h1 id="title">Cat Reloaded Survey Form</h1><br>
     <p id="description"> Thank you for taking the time to help us improve the platform </p>
     <form id="survy-form">
@@ -17,27 +19,27 @@
       <input type="number" class="input" placeholder="Enter Your Age" id="age"><br>
       <label class="label" for="dropdown">Which option best describes your current role?</label><br>
       <select class="input" id="dropdown" value="Select Current role">
-         <option>Select your role</option>
+        <option>Select your role</option>
         <option value="Student">Student</option>
         <option value="Full time job">Full time job</option>
         <option value="Full time learner">Full time learner</option>
         <option value="Prefer Not To Say">Prefer Not To Say</option>
         <option value="Other">Other</option>
-    
+
       </select label><br>
       <div id="radio">
-      <label class="label">Would you recommend freeCodeCamp to a friend?</label><br>
-       <div class="radio">
-      <input type="radio" id="Definitely" value="Definitely" name="friend">
-      <label for ="Definitely">Definitely</label><br> 
-      <input type="radio" value="Maybe" id="Maybe" name="friend"> <label for ="Maybe">Maybe</label><br>
-      <input type="radio" value="Not sure" id="Not sure" name="friend"><label for ="Not sure">Not sure</label><br>
-      </div>
+        <label class="label">Would you recommend freeCodeCamp to a friend?</label><br>
+        <div class="radio">
+          <input type="radio" id="Definitely" value="Definitely" name="friend">
+          <label for="Definitely">Definitely</label><br>
+          <input type="radio" value="Maybe" id="Maybe" name="friend"> <label for="Maybe">Maybe</label><br>
+          <input type="radio" value="Not sure" id="Not sure" name="friend"><label for="Not sure">Not sure</label><br>
+        </div>
       </div>
       <br>
       <label class="label" for="dropdown"> What is your favorite feature of freeCodeCamp? </label><br>
       <select class="input" id="dropdown2" value="Select Current role">
-         <option>Select an option</option>
+        <option>Select an option</option>
         <option value="Challenges">Challenges</option>
         <option value="Projects">Projects</option>
         <option value="Community">Community</option>
@@ -45,24 +47,34 @@
       </select><br>
       <label class="label"> What would you like to see improved? (Check all that apply) </label><br>
       <div class="radio">
-      <input type="checkbox" name="Front-end Projects" value="Front-end Projects" id="Front-end Projects"><label for="Front-end Projects">Front-end Projects</label><br>
-      <input type="checkbox" name="Back-end Projects" value="Back-end Projects" id="Back-end Projects"><label for="Back-end Projects">Back-end Projects</label><br>
-      <input type="checkbox" name="Data Visualization" value="Data Visualization" id="Data Visualization"><label for="Data Visualization">Data Visualization</label><br>
-      <input type="checkbox" name="Challenges" value="Challenges" id="Challenges"><label for="Challenges">Challenges</label><br>
-      <input type="checkbox" name="Open Source Community" value="Open Source Community" id="Open Source Community"><label for="Open Source Community">Open Source Community</label><br>
-      <input type="checkbox" name="Gitter help rooms" value="Gitter help rooms" id="Gitter help rooms"><label for="Gitter help rooms">Gitter help rooms</label><br>
-      <input type="checkbox" name="Videos" value="Videos" id="Videos"><label for="Videos">Videos</label><br>
-      <input type="checkbox" name="City Meetups" value="City Meetups" id="City Meetups"><label for="City Meetups">City Meetups</label><br>
-      <input type="checkbox" name="Wiki" value="Wiki" id="Wiki"><label for="Wiki">Wiki</label><br>
-      <input type="checkbox" name="Forum" value="Forum" id="Forum"><label for="Forum">Forum</label><br>
-      <input type="checkbox" name="Additional Courses" value="Additional Courses" id="Additional Courses"><label for="Additional Courses">Additional Courses</label><br>
+        <input type="checkbox" name="Front-end Projects" value="Front-end Projects" id="Front-end Projects"><label
+          for="Front-end Projects">Front-end Projects</label><br>
+        <input type="checkbox" name="Back-end Projects" value="Back-end Projects" id="Back-end Projects"><label
+          for="Back-end Projects">Back-end Projects</label><br>
+        <input type="checkbox" name="Data Visualization" value="Data Visualization" id="Data Visualization"><label
+          for="Data Visualization">Data Visualization</label><br>
+        <input type="checkbox" name="Challenges" value="Challenges" id="Challenges"><label
+          for="Challenges">Challenges</label><br>
+        <input type="checkbox" name="Open Source Community" value="Open Source Community"
+          id="Open Source Community"><label for="Open Source Community">Open Source Community</label><br>
+        <input type="checkbox" name="Gitter help rooms" value="Gitter help rooms" id="Gitter help rooms"><label
+          for="Gitter help rooms">Gitter help rooms</label><br>
+        <input type="checkbox" name="Videos" value="Videos" id="Videos"><label for="Videos">Videos</label><br>
+        <input type="checkbox" name="City Meetups" value="City Meetups" id="City Meetups"><label for="City Meetups">City
+          Meetups</label><br>
+        <input type="checkbox" name="Wiki" value="Wiki" id="Wiki"><label for="Wiki">Wiki</label><br>
+        <input type="checkbox" name="Forum" value="Forum" id="Forum"><label for="Forum">Forum</label><br>
+        <input type="checkbox" name="Additional Courses" value="Additional Courses" id="Additional Courses"><label
+          for="Additional Courses">Additional Courses</label><br>
       </div>
       <div>
         <label class="label">Any comments or suggestions?</label><br>
         <textarea class="textarea" placeholder="Enter Your Comment"></textarea><br><br>
-      <input type="submit" value="Submit" id="submit">  </div>
+        <input type="submit" value="Submit" id="submit">
+      </div>
       <br><br>
     </form>
-    </main>
+  </main>
 </body>
-    </html>
+
+</html>
